add: header html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ebac Motors</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <h1>EBAC Motors</h1>
+
+        <nav>
+          <ul>
+            <li><a href="#">SOBRE</a></li>
+            <li><a href="#">EM DESTAQUE</a></li>
+            <li><a href="#">PROMOÇÕES</a></li>
+            <li><a href="#">CONTATO</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
