add: header and nav style

--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Ebac Motors</title>
   </head>
   <body>
     <header>
       <div class="container">
         <h1>EBAC Motors</h1>
+      </div>
 
-        <nav>
+      <nav>
+        <div class="container">
           <ul>
             <li><a href="#">SOBRE</a></li>
             <li><a href="#">EM DESTAQUE</a></li>
             <li><a href="#">PROMOÇÕES</a></li>
             <li><a href="#">CONTATO</a></li>
           </ul>
-        </nav>
-      </div>
+        </div>
+      </nav>
     </header>
   </body>
 </html>
