add: menu style to finish

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <header>
       <div class="container">
         <h1>EBAC Motors</h1>
+
+        <div class="menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
 
       <nav>
