--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
 
         <div>
           <label for="name">Nome:</label>
-          <input type="text" id="name" required />
+          <input type="text" id="name" name="name" required />
         </div>
 
         <div>
           <label for="tel">Telefone:</label>
-          <input type="tel" id="tel" required />
+          <input type="tel" id="tel" name="tel" required />
         </div>
 
         <div>
           <label for="email">E-mail:</label>
-          <input type="email" id="email" required />
+          <input type="email" id="email" name="email" required />
         </div>
 
         <div>
@@ -235,6 +235,8 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="jquery.mask.min.js"></script>
+    <script src="jquery.validate.min.js"></script>
+    <script src="messages_pt_BR.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
